--- a/SD.Allen.Frontend/SD.Allen.Frontend.csproj
+++ b/SD.Allen.Frontend/SD.Allen.Frontend.csproj
@@ -67,6 +67,138 @@
     <Content Include="SPPub.frontend.team.config" />
     <Content Include="v2.0\component\.jscsrc" />
     <Content Include="v2.0\component\.jshintrc" />
+    <Content Include="v2.0\component\AllOppty.js" />
+    <Content Include="v2.0\component\AllOpptyTemplate.html" />
+    <Content Include="v2.0\component\AppHome.js" />
+    <Content Include="v2.0\component\AppHomeTemplate.html" />
+    <Content Include="v2.0\component\AttachmentManager.js" />
+    <Content Include="v2.0\component\AttachmentManagerTemplate.html" />
+    <Content Include="v2.0\component\CountrySelector.js" />
+    <Content Include="v2.0\component\CountrySelectorTemplate.html" />
+    <Content Include="v2.0\component\DateTimePicker.js" />
+    <Content Include="v2.0\component\DateTimePickerTemplate.html" />
+    <Content Include="v2.0\component\DollarFormatter.js" />
+    <Content Include="v2.0\component\DollarFormatterTemplate.html" />
+    <Content Include="v2.0\component\MyOppty.js" />
+    <Content Include="v2.0\component\MyOpptyTemplate.html" />
+    <Content Include="v2.0\component\OpptyID.js" />
+    <Content Include="v2.0\component\OpptyIDTemplate.html" />
+    <Content Include="v2.0\component\PeoplePicker.js" />
+    <Content Include="v2.0\component\PeoplePickerTemplate.html" />
+    <Content Include="v2.0\component\QuestionArea.js" />
+    <Content Include="v2.0\component\QuestionAreaTemplate.html" />
+    <Content Include="v2.0\component\ReviewAndExtract.js" />
+    <Content Include="v2.0\component\ReviewAndExtractTemplate.html" />
+    <Content Include="v2.0\component\SDContents.js" />
+    <Content Include="v2.0\component\SDContentsTemplate.html" />
+    <Content Include="v2.0\component\SDErrorPage.js" />
+    <Content Include="v2.0\component\SDErrorPageTemplate.html" />
+    <Content Include="v2.0\component\SDInputText.js" />
+    <Content Include="v2.0\component\SDInputTextTemplate.html" />
+    <Content Include="v2.0\component\Section0201.js" />
+    <Content Include="v2.0\component\Section0201Template.html" />
+    <Content Include="v2.0\component\Section0202.js" />
+    <Content Include="v2.0\component\Section0202Template.html" />
+    <Content Include="v2.0\component\Section0301.js" />
+    <Content Include="v2.0\component\Section0301Template.html" />
+    <Content Include="v2.0\component\Section030201.js" />
+    <Content Include="v2.0\component\Section030201Template.html" />
+    <Content Include="v2.0\component\Section030202.js" />
+    <Content Include="v2.0\component\Section030202Template.html" />
+    <Content Include="v2.0\component\Section030203.js" />
+    <Content Include="v2.0\component\Section030203Template.html" />
+    <Content Include="v2.0\component\Section030204.js" />
+    <Content Include="v2.0\component\Section030204Template.html" />
+    <Content Include="v2.0\component\Section040101.js" />
+    <Content Include="v2.0\component\Section040101Template.html" />
+    <Content Include="v2.0\component\Section040102.js" />
+    <Content Include="v2.0\component\Section040102Template.html" />
+    <Content Include="v2.0\component\Section0402.js" />
+    <Content Include="v2.0\component\Section0402Template.html" />
+    <Content Include="v2.0\component\Section040301.js" />
+    <Content Include="v2.0\component\Section040301Template.html" />
+    <Content Include="v2.0\component\Section040302.js" />
+    <Content Include="v2.0\component\Section040302Template.html" />
+    <Content Include="v2.0\component\Section040303.js" />
+    <Content Include="v2.0\component\Section040303Template.html" />
+    <Content Include="v2.0\component\Section040304.js" />
+    <Content Include="v2.0\component\Section040304Template.html" />
+    <Content Include="v2.0\component\Section040305.js" />
+    <Content Include="v2.0\component\Section040305Template.html" />
+    <Content Include="v2.0\component\Section040306.js" />
+    <Content Include="v2.0\component\Section040306Template.html" />
+    <Content Include="v2.0\component\Section040307.js" />
+    <Content Include="v2.0\component\Section040307Template.html" />
+    <Content Include="v2.0\component\Section0403Template.html" />
+    <Content Include="v2.0\component\Section0404.js" />
+    <Content Include="v2.0\component\Section0404Template.html" />
+    <Content Include="v2.0\component\Section0405.html" />
+    <Content Include="v2.0\component\Section0405.js" />
+    <Content Include="v2.0\component\Section040501.js" />
+    <Content Include="v2.0\component\Section040501Template.html" />
+    <Content Include="v2.0\component\Section040502.js" />
+    <Content Include="v2.0\component\Section040502Template.html" />
+    <Content Include="v2.0\component\Section040503.js" />
+    <Content Include="v2.0\component\Section040503Template.html" />
+    <Content Include="v2.0\component\Section040504.js" />
+    <Content Include="v2.0\component\Section040504Template.html" />
+    <Content Include="v2.0\component\Section040505.js" />
+    <Content Include="v2.0\component\Section040505Template.html" />
+    <Content Include="v2.0\component\Section040506.js" />
+    <Content Include="v2.0\component\Section040506Template.html" />
+    <Content Include="v2.0\component\Section0406.js" />
+    <Content Include="v2.0\component\Section0406Template.html" />
+    <Content Include="v2.0\component\Section0407.js" />
+    <Content Include="v2.0\component\Section0407Template.html" />
+    <Content Include="v2.0\component\Section0409.html" />
+    <Content Include="v2.0\component\Section0409.js" />
+    <Content Include="v2.0\component\Section0411.html" />
+    <Content Include="v2.0\component\Section0411.js" />
+    <Content Include="v2.0\component\Section0412.html" />
+    <Content Include="v2.0\component\Section0412.js" />
+    <Content Include="v2.0\component\Section050101.html" />
+    <Content Include="v2.0\component\Section050101.js" />
+    <Content Include="v2.0\component\Section050102.html" />
+    <Content Include="v2.0\component\Section050102.js" />
+    <Content Include="v2.0\component\Section050103.html" />
+    <Content Include="v2.0\component\Section050103.js" />
+    <Content Include="v2.0\component\Section0601.html" />
+    <Content Include="v2.0\component\Section0601.js" />
+    <Content Include="v2.0\component\Section0701.js" />
+    <Content Include="v2.0\component\Section0701Template.html" />
+    <Content Include="v2.0\component\Section0702.js" />
+    <Content Include="v2.0\component\Section0702Template.html" />
+    <Content Include="v2.0\component\Section0703.js" />
+    <Content Include="v2.0\component\Section0703Template.html" />
+    <Content Include="v2.0\component\Section0704.js" />
+    <Content Include="v2.0\component\Section0704Template.html" />
+    <Content Include="v2.0\component\Section0705.js" />
+    <Content Include="v2.0\component\Section0705Template.html" />
+    <Content Include="v2.0\component\Section0706.js" />
+    <Content Include="v2.0\component\Section0706Template.html" />
+    <Content Include="v2.0\component\Section0707.js" />
+    <Content Include="v2.0\component\Section0707Template.html" />
+    <Content Include="v2.0\component\Section0801.html" />
+    <Content Include="v2.0\component\Section0801.js" />
+    <Content Include="v2.0\component\Section0803.html" />
+    <Content Include="v2.0\component\Section0803.js" />
+    <Content Include="v2.0\component\Section9901.html" />
+    <Content Include="v2.0\component\Section9901.js" />
+    <Content Include="v2.0\component\SectionLoader.js" />
+    <Content Include="v2.0\component\SectionLoaderTemplate.html" />
+    <Content Include="v2.0\component\SPJSONReader.js" />
+    <Content Include="v2.0\component\TopLink.js" />
+    <Content Include="v2.0\component\TopLinkHome.js" />
+    <Content Include="v2.0\component\TopLinkHomeTemplate.html" />
+    <Content Include="v2.0\component\TopLinkTemplate.html" />
+    <Content Include="v2.0\css\sd-shared.css" />
+    <Content Include="v2.0\css\sd-shared.min.css">
+      <DependentUpon>sd-shared.css</DependentUpon>
+    </Content>
+    <Content Include="v2.0\css\sd.css" />
+    <Content Include="v2.0\css\sd.min.css">
+      <DependentUpon>sd.css</DependentUpon>
+    </Content>
     <Content Include="v2.0\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="v2.0\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="v2.0\fonts\glyphicons-halflings-regular.woff" />
@@ -205,120 +337,6 @@
     <Content Include="v1.0\util\KBUtils.js" />
     <Content Include="v1.0\util\SPCamlBuilder.js" />
     <Content Include="v1.0\util\SPDataReader.js" />
-    <Content Include="v2.0\component\AllOppty.js" />
-    <Content Include="v2.0\component\AllOpptyTemplate.html" />
-    <Content Include="v2.0\component\AppHome.js" />
-    <Content Include="v2.0\component\AppHomeTemplate.html" />
-    <Content Include="v2.0\component\AttachmentManager.js" />
-    <Content Include="v2.0\component\AttachmentManagerTemplate.html" />
-    <Content Include="v2.0\component\CountrySelector.js" />
-    <Content Include="v2.0\component\CountrySelectorTemplate.html" />
-    <Content Include="v2.0\component\DateTimePicker.js" />
-    <Content Include="v2.0\component\DateTimePickerTemplate.html" />
-    <Content Include="v2.0\component\DollarFormatter.js" />
-    <Content Include="v2.0\component\DollarFormatterTemplate.html" />
-    <Content Include="v2.0\component\MyOppty.js" />
-    <Content Include="v2.0\component\MyOpptyTemplate.html" />
-    <Content Include="v2.0\component\OpptyID.js" />
-    <Content Include="v2.0\component\OpptyIDTemplate.html" />
-    <Content Include="v2.0\component\PeoplePicker.js" />
-    <Content Include="v2.0\component\PeoplePickerTemplate.html" />
-    <Content Include="v2.0\component\QuestionArea.js" />
-    <Content Include="v2.0\component\QuestionAreaTemplate.html" />
-    <Content Include="v2.0\component\ReviewAndExtract.js" />
-    <Content Include="v2.0\component\ReviewAndExtractTemplate.html" />
-    <Content Include="v2.0\component\SDContents.js" />
-    <Content Include="v2.0\component\SDContentsTemplate.html" />
-    <Content Include="v2.0\component\SDErrorPage.js" />
-    <Content Include="v2.0\component\SDErrorPageTemplate.html" />
-    <Content Include="v2.0\component\SDInputText.js" />
-    <Content Include="v2.0\component\SDInputTextTemplate.html" />
-    <Content Include="v2.0\component\Section0201.js" />
-    <Content Include="v2.0\component\Section0201Template.html" />
-    <Content Include="v2.0\component\Section0202.js" />
-    <Content Include="v2.0\component\Section0202Template.html" />
-    <Content Include="v2.0\component\Section0301.js" />
-    <Content Include="v2.0\component\Section0301Template.html" />
-    <Content Include="v2.0\component\Section030201.js" />
-    <Content Include="v2.0\component\Section030201Template.html" />
-    <Content Include="v2.0\component\Section030202.js" />
-    <Content Include="v2.0\component\Section030202Template.html" />
-    <Content Include="v2.0\component\Section030203.js" />
-    <Content Include="v2.0\component\Section030203Template.html" />
-    <Content Include="v2.0\component\Section030204.js" />
-    <Content Include="v2.0\component\Section030204Template.html" />
-    <Content Include="v2.0\component\Section040101.js" />
-    <Content Include="v2.0\component\Section040101Template.html" />
-    <Content Include="v2.0\component\Section040102.js" />
-    <Content Include="v2.0\component\Section040102Template.html" />
-    <Content Include="v2.0\component\Section0402.js" />
-    <Content Include="v2.0\component\Section0402Template.html" />
-    <Content Include="v2.0\component\Section040301.js" />
-    <Content Include="v2.0\component\Section040301Template.html" />
-    <Content Include="v2.0\component\Section040302.js" />
-    <Content Include="v2.0\component\Section040302Template.html" />
-    <Content Include="v2.0\component\Section040303.js" />
-    <Content Include="v2.0\component\Section040303Template.html" />
-    <Content Include="v2.0\component\Section040304.js" />
-    <Content Include="v2.0\component\Section040304Template.html" />
-    <Content Include="v2.0\component\Section040305.js" />
-    <Content Include="v2.0\component\Section040305Template.html" />
-    <Content Include="v2.0\component\Section040306.js" />
-    <Content Include="v2.0\component\Section040306Template.html" />
-    <Content Include="v2.0\component\Section040307.js" />
-    <Content Include="v2.0\component\Section040307Template.html" />
-    <Content Include="v2.0\component\Section0403Template.html" />
-    <Content Include="v2.0\component\Section0404.js" />
-    <Content Include="v2.0\component\Section0404Template.html" />
-    <Content Include="v2.0\component\Section040501.js" />
-    <Content Include="v2.0\component\Section040501Template.html" />
-    <Content Include="v2.0\component\Section040502.js" />
-    <Content Include="v2.0\component\Section040502Template.html" />
-    <Content Include="v2.0\component\Section040503.js" />
-    <Content Include="v2.0\component\Section040503Template.html" />
-    <Content Include="v2.0\component\Section040504.js" />
-    <Content Include="v2.0\component\Section040504Template.html" />
-    <Content Include="v2.0\component\Section040505.js" />
-    <Content Include="v2.0\component\Section040505Template.html" />
-    <Content Include="v2.0\component\Section040506.js" />
-    <Content Include="v2.0\component\Section040506Template.html" />
-    <Content Include="v2.0\component\Section0406.js" />
-    <Content Include="v2.0\component\Section0406Template.html" />
-    <Content Include="v2.0\component\Section0407.js" />
-    <Content Include="v2.0\component\Section0407Template.html" />
-    <Content Include="v2.0\component\SectionLoader.js" />
-    <Content Include="v2.0\component\SectionLoaderTemplate.html" />
-    <Content Include="v2.0\component\SPJSONReader.js" />
-    <Content Include="v2.0\component\TopLink.js" />
-    <Content Include="v2.0\component\TopLinkHome.js" />
-    <Content Include="v2.0\component\TopLinkHomeTemplate.html" />
-    <Content Include="v2.0\component\TopLinkTemplate.html" />
-    <Content Include="v2.0\css\bootstrap-datetimepicker.css" />
-    <Content Include="v2.0\css\bootstrap-datetimepicker.min.css" />
-    <Content Include="v2.0\css\bootstrap-multiselect.css" />
-    <Content Include="v2.0\css\bootstrap-theme.css" />
-    <Content Include="v2.0\css\bootstrap-theme.min.css" />
-    <Content Include="v2.0\css\bootstrap.css" />
-    <Content Include="v2.0\css\bootstrap.min.css" />
-    <Content Include="v2.0\css\dataTables.tableTools.css" />
-    <Content Include="v2.0\css\dataTables.tableTools.min.css" />
-    <Content Include="v2.0\css\jasny-bootstrap.css" />
-    <Content Include="v2.0\css\jasny-bootstrap.min.css" />
-    <Content Include="v2.0\css\jquery-ui.css" />
-    <Content Include="v2.0\css\jquery.autocomplete.css" />
-    <Content Include="v2.0\css\jquery.dataTables.css" />
-    <Content Include="v2.0\css\jquery.dataTables.min.css" />
-    <Content Include="v2.0\css\jquery.dataTables_themeroller.css" />
-    <Content Include="v2.0\css\jquery.magnific-popup.css" />
-    <Content Include="v2.0\css\jquery.numbox-1.2.0.css" />
-    <Content Include="v2.0\css\normalize.css" />
-    <Content Include="v2.0\css\sd-css.css" />
-    <Content Include="v2.0\css\sd-shared.css" />
-    <Content Include="v2.0\css\sd-shared.min.css" />
-    <Content Include="v2.0\css\sd.css" />
-    <Content Include="v2.0\css\sd.min.css" />
-    <Content Include="v2.0\css\select2.css" />
-    <Content Include="v2.0\css\select2.min.css" />
     <Content Include="v2.0\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="v2.0\images\sort_asc.png" />
     <Content Include="v2.0\images\sort_asc_disabled.png" />
@@ -360,7 +378,6 @@
     <Content Include="v2.0\js\select2.min.js" />
     <Content Include="v2.0\js\webComponentLoader.js" />
     <Content Include="v2.0\js\wysiwyg.js" />
-    <Content Include="v2.0\model\AppConfig.js" />
     <Content Include="v2.0\model\Oppty.js" />
     <Content Include="v2.0\model\RequestAPI.js" />
     <Content Include="v2.0\require.js" />
