--- a/ConvertingJson/ConvertingJson.csproj
+++ b/ConvertingJson/ConvertingJson.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Record.cs" />
     <EmbeddedResource Include="ConvertFrm.resx">
       <DependentUpon>ConvertFrm.cs</DependentUpon>
     </EmbeddedResource>
