--- a/ConvertingJson/ConvertingJson.csproj
+++ b/ConvertingJson/ConvertingJson.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
+    <Compile Include="SectionPath.cs" />
     <EmbeddedResource Include="ConvertFrm.resx">
       <DependentUpon>ConvertFrm.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,6 +115,11 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="path.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
