--- a/ConvertingJson/ConvertingJson.csproj
+++ b/ConvertingJson/ConvertingJson.csproj
@@ -77,6 +77,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Json\07080910.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -122,6 +125,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Excel_128px_1121167_easyicon.net.ico" />
+    <None Include="Json\080910.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Content Include="path.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
