--- a/ConvertingJson/ConvertingJson.csproj
+++ b/ConvertingJson/ConvertingJson.csproj
@@ -55,11 +55,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BatchParse.cs">
+    <Compile Include="BatchParseFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BatchParse.Designer.cs">
-      <DependentUpon>BatchParse.cs</DependentUpon>
+    <Compile Include="BatchParseFrm.Designer.cs">
+      <DependentUpon>BatchParseFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="ConvertFrm.cs">
       <SubType>Form</SubType>
@@ -71,6 +71,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
     <Compile Include="SectionPath.cs" />
+    <EmbeddedResource Include="BatchParseFrm.resx">
+      <DependentUpon>BatchParseFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ConvertFrm.resx">
       <DependentUpon>ConvertFrm.cs</DependentUpon>
     </EmbeddedResource>
